# experiments-for-modern-ai-and-mlops

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  config.py  pyproject.toml  requirements.txt  tutorial.md
dev/: example-finetune-llm-text2sql.ipynb  llm-huggingface-evaluation.ipynb  llm-question-answering-evaluation.ipynb  llm-transformers-text-generation.ipynb  logging-first-model.ipynb  tutorial.md
notebooks/: 1-get-started.ipynb  2-manage-runs.ipynb  3-model-registry.ipynb  4-train-eval-with-nested-runs.ipynb  5-genai-with-mlflow-3.ipynb  6-question-answering-evaluation.ipynb  _dev.ipynb  assignment-5-evaluate-llm.ipynb  llm-rag-evaluation-llama2.ipynb  llm-rag-evaluation.ipynb  metrics_tracking.ipynb  mlflow_run_info.json  model-registry.ipynb  movie-recommendation.ipynb  train-model-kfold.ipynb  train-model.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/807831340592749652/: meta.yaml
src/: load_data.py
